Added arrow, still need to fix animation

--- a/survive.html
+++ b/survive.html
@@ -11,6 +11,7 @@
                 <script type="text/javascript" src="js/Survive.js"></script>
                 <script type="text/javascript" src="js/CanvasState.js"></script>
                 <script type="text/javascript" src="js/Surviver.js"></script>
+                <script type="text/javascript" src="js/Arrow.js"></script>
     </head>
     <body onload="initializeGameState()">
         <section class="section">
