Gave up on rotating arrow and added new arrow images, changed the scale/size of things, still hardcoded values that need to change

--- a/survive.html
+++ b/survive.html
@@ -16,7 +16,7 @@
     <body onload="initializeGameState()">
         <section class="section">
             <div id="gameContainer" class="container">
-                <canvas id="gameCanvas"></canvas>
+                <canvas id="gameCanvas" width="750" height="750"></canvas>
             </div>
         </section>
     </body>
