Code cleanup and added a mob

--- a/survive.html
+++ b/survive.html
@@ -1,22 +1,24 @@
 <html>
     <head>
-                <!-- Application Stylesheets -->
-                <link rel="stylesheet" type="text/css" href="css/Survive.css">
+        <!-- Application Stylesheets -->
+        <link rel="stylesheet" type="text/css" href="css/Survive.css">
 
-                <!-- Library scripts -->
-                <script type="text/javascript" src="libraries/jquery-3.2.1.min.js"></script>
-                <script type="text/javascript" src="libraries/underscore-min.js"></script>
-        
-                <!-- Application scripts -->
-                <script type="text/javascript" src="js/Survive.js"></script>
-                <script type="text/javascript" src="js/CanvasState.js"></script>
-                <script type="text/javascript" src="js/Surviver.js"></script>
-                <script type="text/javascript" src="js/Arrow.js"></script>
+        <!-- Library scripts -->
+        <script type="text/javascript" src="libraries/jquery-3.2.1.min.js"></script>
+        <script type="text/javascript" src="libraries/underscore-min.js"></script>
+
+        <!-- Application scripts -->
+        <script type="text/javascript" src="js/Survive.js"></script>
+        <script type="text/javascript" src="js/CanvasState.js"></script>
+        <script type="text/javascript" src="js/Agent.js"></script>
+        <script type="text/javascript" src="js/Surviver.js"></script>
+        <script type="text/javascript" src="js/Mob.js"></script>
+        <script type="text/javascript" src="js/Arrow.js"></script>
     </head>
     <body onload="initializeGameState()">
         <section class="section">
             <div id="gameContainer" class="container">
-                <canvas id="gameCanvas" width="750" height="750"></canvas>
+                <canvas id="gameCanvas" width="800" height="800"></canvas>
             </div>
         </section>
     </body>
